--- a/mediabook-main/index.html
+++ b/mediabook-main/index.html
@@ -375,7 +375,7 @@
                     <div class="dp">
                         <img src="./images/dp.jpg" alt="">
                     </div>
-                    <p class="name">Ramesh GC</p>
+                    <p class="Nombre">Ramesh GC</p>
                 </a>
 
                 <a class="friend" href="#">
